charts/unifi-security.yaml
# UniFi Security - IP Whitelist Middleware

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-ip-whitelist
  namespace: unifi
spec:
  ipWhiteList:
    sourceRange:
    - "90.191.213.212/32"  # Your home WAN IP
    - "46.131.89.176/32"   # Your mobile IP
    - "10.0.0.0/8"          # Private networks
    - "192.168.0.0/16"      # Private networks
    - "172.16.0.0/12"       # Private networks
    - "85.0.0.0/8"          # Tele2 Estonia
    - "92.0.0.0/8"          # Elisa Estonia
    - "193.40.0.0/16"       # Telia Estonia

---
# Update the secure route with IP whitelist

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-secure-secure
  namespace: unifi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`unifi.waushop.ee`)
    kind: Rule
    middlewares:
    - name: unifi-ip-whitelist
      namespace: unifi
    services:
    - name: unifi-ingress
      port: 8443
      scheme: https
      serversTransport: unifi-https-transport
  tls:
    domains:
    - main: unifi.waushop.ee
    options:
      name: unifi-tls-options
      namespace: unifi
    secretName: unifi-tls
